--- a/index.html
+++ b/index.html
@@ -44,24 +44,24 @@
                          <img src="assets/images/chrismon-anchor-largeaaaa-702x799.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="index.html">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href=".html">
                         MAAP CHRISTIAN<br>FELLOWSHIP</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="testimonials" aria-expanded="true" target="_blank" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>About</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html" aria-expanded="true" target="_blank">About</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="true" target="_blank">Ministry</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="false" target="_blank">Testimonials</a></div></li><li class="nav-item dropdown">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="testimonials" aria-expanded="true" target="_blank" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>About</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html" aria-expanded="true" target="_blank">About</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="true" target="_blank">Ministry</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="false" target="_blank">Testimonials</a></div></li><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="Services" data-toggle="dropdown-submenu" aria-expanded="false">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Sermons</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="service1">Midweek Service</a><a class="text-white dropdown-item display-4" href="service2" aria-expanded="false">Saturday Service</a></div>
                 </li><li class="nav-item"><a class="nav-link link text-white display-4" href="guides" aria-expanded="true">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Gallery</a></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="guides" aria-expanded="false" data-toggle="dropdown-submenu">
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Gallery</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="guides" aria-expanded="true" data-toggle="dropdown-submenu">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Be Equip</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="devotionals.html" aria-expanded="true">Devotionals</a><a class="text-white dropdown-item display-4" href="guides" aria-expanded="false">Training Manuals</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">Contact us</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="cid-qF7fARbwfO mbr-fullscreen" id="header2-f">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="cid-qF7fARbwfO mbr-fullscreen mbr-parallax-background" id="header2-f">
 
     
 
@@ -191,6 +191,7 @@
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
