--- a/devotionals.html
+++ b/devotionals.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-23">
+<section class="engine"><a href="https://mobirise.co/i">build your own website for free</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-23">
 
     
 
