--- a/events.html
+++ b/events.html
@@ -48,19 +48,19 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="testimonials" aria-expanded="false" target="_blank" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>About</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html" aria-expanded="true" target="_blank">About</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="true" target="_blank">Ministry</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="false" target="_blank">Testimonials</a></div></li><li class="nav-item dropdown">
+            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="testimonials" aria-expanded="true" target="_blank" data-toggle="dropdown-submenu"><span class="mbri-users mbr-iconfont mbr-iconfont-btn"></span>About</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html" aria-expanded="true" target="_blank">About</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="true" target="_blank">Ministry</a><a class="text-white dropdown-item display-4" href="testimonials" aria-expanded="false" target="_blank">Testimonials</a></div></li><li class="nav-item dropdown">
                     <a class="nav-link link text-white dropdown-toggle display-4" href="Services" data-toggle="dropdown-submenu" aria-expanded="false">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Sermons</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="service1">Midweek Service</a><a class="text-white dropdown-item display-4" href="service2" aria-expanded="false">Saturday Service</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="guides" aria-expanded="true" data-toggle="dropdown-submenu">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Gallery</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="guides" aria-expanded="true">2017<br></a><a class="text-white dropdown-item display-4" href="guides" aria-expanded="true">2018</a></div></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="guides" aria-expanded="false" data-toggle="dropdown-submenu">
+                </li><li class="nav-item"><a class="nav-link link text-white display-4" href="guides" aria-expanded="true">
+                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Gallery</a></li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="guides" aria-expanded="true" data-toggle="dropdown-submenu">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Be Equip</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="devotionals.html" aria-expanded="true">Devotionals</a><a class="text-white dropdown-item display-4" href="guides" aria-expanded="false">Training Manuals</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com">Contact us</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-1z">
+<section class="engine"><a href="https://mobirise.co/j">how to design your own website for free</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-1z">
 
     
 
