create github pages

--- a/devotionals.html
+++ b/devotionals.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">web site builder</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-23">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-23">
 
     
 
