--- a/events.html
+++ b/events.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/j">how to design your own website for free</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-1z">
+<section class="engine"><a href="https://mobirise.co/g">create a website for free</a></section><section once="" class="cid-qFe08KTsPp" id="footer6-1z">
 
     
 
